Update jupyter notebooks

--- a/app/BERT.ipynb
+++ b/app/BERT.ipynb
@@ -506,9 +506,7 @@
    "source": [
     "## 3.1 Embedding\n",
     "\n",
-    "Here we simply generate the positional embedding, and sum the token embedding, positional embedding, and segment embedding together.\n",
-    "\n",
-    "<img src = \"figures/BERT_embed.png\" width=500>"
+    "Here we simply generate the positional embedding, and sum the token embedding, positional embedding, and segment embedding together."
    ]
   },
   {
