--- a/app/S-BERT.ipynb
+++ b/app/S-BERT.ipynb
@@ -711,9 +711,7 @@
     "## Regression Objective Function. \n",
     "The cosine similarity between the two sentence embeddings $u$ and $v$ is computed (Figure 2). We use means quared-error loss as the objective function.\n",
     "\n",
-    "(Manhatten / Euclidean distance, semantically  similar sentences can be found.)\n",
-    "\n",
-    "<img src=\"./figures/sbert-architecture.png\" >"
+    "(Manhatten / Euclidean distance, semantically  similar sentences can be found.)"
    ]
   },
   {
@@ -737,14 +735,6 @@
     "    norm_v = torch.norm(v, dim=-1)\n",
     "    similarity = dot_product / (norm_u * norm_v + 1e-9)\n",
     "    return similarity"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"./figures/sbert-ablation.png\" width=\"350\" height=\"300\">"
    ]
   },
   {
